Use JS to make bg change on slide change, font and style changes

--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -23,7 +23,7 @@
 		margin-right: 0;	
 	}
 
-	@include media-breakpoint-up(md) {
+	@include media-breakpoint-up(lg) {
 		top: 55px;
 		right: 50px;
 	}
