--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,7 +1,84 @@
 body {
-	background: $body-bg;
-	background-size: 30%;
+	transition: background-color $transition-time ease-in-out;
+	background-color: $body-bg;
+
+	&.bg-1 {
+		background-color: $body-bg;
+	}
+	&.bg-2 {
+		background-color: adjust-hue($body-bg, 36%);
+	}
+	&.bg-3 {
+		background-color: adjust-hue($body-bg, 72%);
+	}
+	&.bg-4 {
+		background-color: adjust-hue($body-bg, 108%);
+	}
+	&.bg-5 {
+		background-color: adjust-hue($body-bg, 144%);
+	}
+	&.bg-6 {
+		background-color: adjust-hue($body-bg, 180%);
+	}
+	&.bg-7 {
+		background-color: adjust-hue($body-bg, 216%);
+	}
+	&.bg-8 {
+		background-color: adjust-hue($body-bg, 252%);
+	}
+	&.bg-9 {
+		background-color: adjust-hue($body-bg, 288%);
+	}
+	&.bg-10 {
+		background-color: adjust-hue($body-bg, 324%);
+	}
 }
+
+.navbar {
+	transition: background-color $transition-time ease-in-out;
+
+	.bg-1 & {
+		background-color: $body-bg;
+	}
+	.bg-2 & {
+		background-color: adjust-hue($body-bg, 36%);
+	}
+	.bg-3 & {
+		background-color: adjust-hue($body-bg, 72%);
+	}
+	.bg-4 & {
+		background-color: adjust-hue($body-bg, 108%);
+	}
+	.bg-5 & {
+		background-color: adjust-hue($body-bg, 144%);
+	}
+	.bg-6 & {
+		background-color: adjust-hue($body-bg, 180%);
+	}
+	.bg-7 & {
+		background-color: adjust-hue($body-bg, 216%);
+	}
+	.bg-8 & {
+		background-color: adjust-hue($body-bg, 252%);
+	}
+	.bg-9 & {
+		background-color: adjust-hue($body-bg, 288%);
+	}
+	.bg-10 & {
+		background-color: adjust-hue($body-bg, 324%);
+	}
+}
+
+.navbar,
+.wrap {
+	transition: opacity $transition-time ease-in-out, background-color $transition-time ease-in-out;
+	opacity: 0;
+
+	.page-ready & {
+		opacity: 1;
+	}
+}
+
 
 a:link, a:active, a:visited, a:hover {
 	text-decoration: none;
