--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -189,6 +189,7 @@ $sizes: (
 //
 // Settings for the `<body>` element.
 
+//$body-bg:       #e8d99d !default;
 $body-bg:       #e8d99d !default;
 $body-color:    darken($gray-dark, 20%) !default;
 $inverse-bg:    $gray-dark !default;
@@ -252,8 +253,8 @@ $grid-gutter-widths: (
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: 'Quicksand', "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
-$font-family-sans-serif-alt: 'Open Sans', "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$font-family-sans-serif: 'Europa', 'Quicksand', "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$font-family-sans-serif-alt: 'Europa', 'Open Sans', "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
 $font-family-serif:      Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:       $font-family-sans-serif !default;
