--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -15,7 +15,7 @@
 	right: $grid-gutter-width-base / 2;
 	left: $grid-gutter-width-base / 2;
 	text-align: center;
-	z-index: 10;
+	z-index: $zindex-tooltip;
 
 	p {
 		display: block;
@@ -31,6 +31,10 @@
 	// RESPONSIVE
 	@include media-breakpoint-up(sm) {
 		font-size: 15px;
+	}
+
+	@include media-breakpoint-up(lg) { 
+		top: $navbar-height + 50px;
 	}
 }
 
