--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -18,7 +18,7 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background-color: rgba(255,255,255,0.1);
+		border-bottom: 1px solid rgba(255,255,255,0.1);
 		z-index: 1;
 	}
 }
