--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -43,9 +43,11 @@
 	bottom: 65px;
 	width: 100%;
 
-	@include media-breakpoint-up(sm) {
-        //bottom: 85px;
-    }
+	@include media-breakpoint-up(lg) {
+		width: $navbar-width;
+		left: $grid-gutter-width-base / 2;
+		z-index: $zindex-tooltip;
+	}
 }
 
 .pager {	
@@ -66,11 +68,21 @@
 
 	&.prev {
 		margin-left: -100px;
+		
+		@include media-breakpoint-up(lg) {
+			margin-left: -90px;
+		}
 	}
 
 	&.next {
 		margin-left: 60px;
+
+		@include media-breakpoint-up(lg) {
+			margin-left: 50px;
+		}
 	}
+
+
 }
 
 .pager li a {
