--- a/assets/styles/components/_comments.scss
+++ b/assets/styles/components/_comments.scss
@@ -41,6 +41,7 @@ ol.comment-list {
 	transition: opacity $transition-time ease-in-out;
 	transition-delay: $transition-time;
 	opacity: 0;
+	position: relative;
 
 	.slick-active & {
 		opacity: 1;
@@ -69,7 +70,7 @@ ol.comment-list {
 	}
 
 	@include media-breakpoint-up(xl) {
-		font-size: 4.5vw;
+		font-size: 5.5vw;
 	}
 }
 
@@ -80,8 +81,7 @@ ol.comment-list {
 
 // On inner pages, when the page loads, transition
 
-.suggestion-text,
-.suggestion-contributor-wrap {
+.suggestion-text {
 	transition: transform $transition-time ease-in-out, opacity $transition-time ease-in-out;
 	transition-delay: 0.5s;
 	opacity: 0;
@@ -112,15 +112,28 @@ ol.comment-list {
 }
 
 .suggestion-contributor-wrap {
-	font-family: $font-family-sans-serif;
-	font-size: 12px;
-	transition-delay: 0.75s; // Bring in a little later
-	color: lighten($body-color, 20%);
-	font-weight: 400;
 	display: none; // hide on smaller screens
 	
 	@include media-breakpoint-up(sm) {
+		transition: transform $transition-time ease-in-out, opacity $transition-time ease-in-out;
+		transition-delay: $transition-time * 3;
 		display: block;
+		font-family: $font-family-sans-serif;
+		font-size: 12px;
+		transition-delay: 0.75s; // Bring in a little later
+		color: lighten($body-color, 20%);
+		font-weight: 400;
+		position: absolute;
+		bottom: 40px;
+		transition-delay: 0.5s;
+		opacity: 0;
+		transform: translate3d(20px,0,0);
+
+		.slick-active &,
+		.page-template-template-custom & {
+			opacity: 1;
+			transform: translate3d(0,0,0);
+		}
 	}
 
 	img {
