--- a/assets/styles/components/_forms.scss
+++ b/assets/styles/components/_forms.scss
@@ -15,6 +15,8 @@
   @extend .btn-secondary;
   font-family: $font-family-sans-serif;
   font-size: 25px;
+  margin-right: 15px;
+  margin-left: 15px;
   color: $brand-primary;
   background-color: $body-bg;
   border: 0;
@@ -169,14 +171,24 @@ input[type=email], input[type=text], input[type=url], textarea, .form-control, .
 }
 
 #comment-wrap,
-.comment-form {
-	width: 100%;
-    max-width: 800px;
+.comment-form,
+.form-submit {
+	max-width: 500px;
+	margin-left: auto;
+	margin-right: auto;
+    @include media-breakpoint-up(lg) {
+    	width: 100%;
+    	max-width: 800px;
+    }
 }
 
 #comment-wrap {
 	position: relative;
 	
+	h4 {
+		display: block;
+		width: 100%;
+	}
 
 	#maxlength-p {
 		position: absolute;
