Stable version of redesign

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -117,10 +117,13 @@ $transition-time:       0.25s;
 $white:  #fff !default;
 $black:  #000 !default;
 $red:    #d9534f !default;
+$red-rgba:       rgba(217,83,79,0.1) !default;
 $orange: #f0ad4e !default;
 $yellow: #ffd500 !default;
 $green:  #5cb85c !default;
+$green-rgba:     rgba(92,184,92,0.1) !default;
 $blue:   #228DAE !default;
+$blue-rgba:      rgba(34,141,174,0.1) !default;
 $teal:   #5bc0de !default;
 $pink:   #ff5b77 !default;
 $purple: #6838AE !default;
