--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -32,6 +32,7 @@
 
 	&:hover {
 		cursor: pointer;
+		color: $white;
 		background-color: lighten($brand-primary, 10%);
 	}
 }
@@ -68,4 +69,35 @@
   100% {
       box-shadow: 0 0 0 0 rgba(104,56,174, 0);
   }
+}
+
+.btn-slide {
+	overflow: hidden;
+	position: relative;
+	padding: 3px 5px;
+}
+
+.alert-link.btn-slide::after {
+	background: rgba(255,255,255,0.1);
+}
+
+.btn-slide::after {
+	transition: transform $transition-time ease-in-out;
+	content: "";
+	position: absolute;
+	background: rgba(255,255,255,0.75);
+	border-radius: 30px;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transform: scaleX(0);
+	transform-origin: right;
+	z-index: -1;
+}
+
+.btn-slide:hover::after {
+	transform: scaleX(1);
+	transform-origin: left;
+	transition-delay: 0s;
 }
