--- a/assets/styles/components/_comments.scss
+++ b/assets/styles/components/_comments.scss
@@ -114,23 +114,37 @@ ol.comment-list {
 .suggestion-contributor-wrap {
 	display: none; // hide on smaller screens
 	
-	@include media-breakpoint-up(sm) {
-		transition: transform $transition-time ease-in-out, opacity $transition-time ease-in-out;
-		transition-delay: $transition-time * 3;
+	@include media-breakpoint-up(lg) {
 		display: block;
 		font-family: $font-family-sans-serif;
-		font-size: 12px;
-		transition-delay: 0.75s; // Bring in a little later
+		font-size: 13px;
 		color: lighten($body-color, 20%);
 		font-weight: 400;
 		position: absolute;
 		bottom: 40px;
-		transition-delay: 0.5s;
-		opacity: 0;
-		transform: translate3d(20px,0,0);
+
+		// Animated border
+		&::before {
+			transition: left $transition-time ease-in-out, width $transition-time ease-in-out;
+			transition-delay: $transition-time * 3;
+			content: "";
+			position: absolute;
+			border-top: 2px solid $brand-primary;
+			width: 0;
+			height: 0;
+			top: -20px;
+			left: 100%;
+
+			.slick-active &,
+			.page-ready.page-template-template-custom &,
+			.page-template-template-thank-you & {
+				width: 30%;
+				left: 33.33%;
+			}	
+		}
 
 		.slick-active &,
-		.page-template-template-custom & {
+		.page-ready.page-template-template-custom & {
 			opacity: 1;
 			transform: translate3d(0,0,0);
 		}
@@ -142,6 +156,36 @@ ol.comment-list {
 		overflow: hidden;
 	}
 }
+
+// Animate in individual things
+.suggestion-contributor,
+.suggestion-link {
+	transition: transform $transition-time ease-in-out, opacity $transition-time ease-in-out;
+	opacity: 0;
+	transform: scale(1.2);
+	display: block;
+	padding-bottom: 2px;
+
+	.slick-active &,
+	.page-ready.page-template-template-custom &,
+	.page-template-template-thank-you & {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
+
+// Staggered delay
+.suggestion-contributor {
+	transition-delay: $transition-time * 4;
+}
+
+
+.suggestion-link {
+	transition-delay: $transition-time * 4.5;
+}
+
+
+
 
 .suggestion-contributor-wrap .avatar,
 .suggestion-contributor-wrap .fa {
@@ -155,7 +199,29 @@ ol.comment-list {
 	top: -2px;
 	margin-right: 2px;
 }
- 
+
+
+.cld-like-wrap,
+.cld-dislike-wrap {
+	transition: opacity $transition-time ease-in-out, transform $transition-time ease-in-out;
+	opacity: 0;
+	transform: translate(0, 10px);
+
+	.slick-active & {
+		opacity: 1;
+		transform: translate(0, 0);
+	}
+}
+
+// Stagger delays
+.cld-like-wrap {
+	transition-delay: $transition-time + 0.2;
+}
+
+.cld-dislike-wrap {
+	transition-delay: $transition-time + 0.3;
+}
+
 .cld-like-dislike-wrap .cld-common-wrap {
 	position: relative;
 	min-width: 30px;
