--- a/assets/styles/components/_slick.scss
+++ b/assets/styles/components/_slick.scss
@@ -72,7 +72,7 @@ $slick-opacity-not-active: 0.25 !default;
     display: block;
     height: 30px;
     width: 30px;
-    margin: 5px;
+    margin: 5px 10px;
     border-radius: 100%;
     background: rgba(255,255,255,0.5);
     line-height: 0px;
@@ -89,8 +89,9 @@ $slick-opacity-not-active: 0.25 !default;
     outline: none;
 
     // RESPONSIVE
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(lg) {
         //bottom: 50px;
+        margin: 5px;
     }
 
 
