--- a/assets/styles/components/_comments.scss
+++ b/assets/styles/components/_comments.scss
@@ -47,6 +47,7 @@ ol.comment-list {
 	.page-ready.page-template-template-custom &,
 	.page-template-template-thank-you &  {
 		opacity: 1;
+		width: 100%;
 	}
 }
 
